Bug 489234 - Replace new Integer(int) with Integer.valueOf()
Changes for 
org.eclipse.jface.snippets

Change-Id: I756270bda54c4f50118a20f3be6d269a7bffc6f4